            - The native C++ integer versions of these functions are now
              templated, and explicitly support 8-bit integers (i.e., chars)
              and 128-bit integers (if the platform supports them).
        Function toString():
            - New function for converting native C++ integers to strings, with
              explicit support for 128-bit integers.
        Function valueOf():
            - The native C++ integer versions of valueOf() are now templated,
              and now support 128-bit integers (if the platform supports them).
            - All integer versions now return false if the integer encoded by
              the string is out of range for the relevant integer type.
            - All numeric versions of valueOf() (native integers and double)
              have been tightened with respect to unexpected characters,
              including leading and trailing whitespace:
              + they always return false, as the documentation has always
                promised (in the past, they succeeded in the presence of
                leading whitespace);
              + instead of performing the conversion "as best it can", the
                documentation now states that the value stored in dest is
                left unchanged.
            - All versions of valueOf() now leave dest unchanged if there was
              an error (as opposed to leaving dest undefined, as was the case
              for integer versions, or setting dest to a fixed false/empty
              value, as was the case for bool and BoolSet versions).
            - The BoolSet version is now deprecated; use the identical
              BoolSet::setStringCode() instead.
        Type alias Int128, UInt128:
            - Provides access to native 128-bit integers, if the platform
              supports them.  This is preferred to the old (and clumsier) way
              of accessing 128-bit types via the type aliases in IntOfSize<16>.